--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                      </div>
 
                      <div class="col-md-4 status">
-                        <h5 id="subtotal">$1,278</h5>
-                        <h5>$0</h5>
-                        <h5>$1,278</h5>
+                        <h5 id="total-price">$1,278</h5>
+                        <h5 id="tax-amount">$0</h5>
+                        <h5 id="grand-total">$1,278</h5>
                      </div>
                   </div>
                </div>
@@ -96,6 +96,8 @@
          
          const productInput = document.getElementById(product + '-count');
          const productCount = parseInt(productInput.value);
+         // const productCount = getInputValue(product);
+         
          // const caseNewCount = caseCount - 1;
          let productNewCount = 0;
          if(isIncrease == true){
@@ -114,8 +116,30 @@
             productTotal = productNewCount * 59;
          }
          document.getElementById(product + '-total').innerText = '$' + productTotal;
+         calculateTotal();
       }
 
+      function calculateTotal(){
+         const phoneCount = getInputValue('phone');
+         const caseCount = getInputValue('case');
+
+         const totalPrice = phoneCount * 1219 + caseCount * 59;
+         document.getElementById('total-price').innerText = '$' + totalPrice;
+
+         const tax = Math.round(totalPrice * 0.1);
+         document.getElementById('tax-amount').innerText = '$' + tax;
+
+         const grandTotal = totalPrice + tax;
+         document.getElementById('grand-total').innerText = '$' + grandTotal;
+
+
+      }
+
+function getInputValue(product){
+   const productInput = document.getElementById(product + '-count');
+   const productCount = parseInt(productInput.value);
+   return productCount;
+}
       // document.getElementById('case-decrease').addEventListener('click', function(){
       //    const caseInput = document.getElementById('case-count');
       //    const caseCount = parseInt(caseInput.value);
